--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -26,7 +26,7 @@ span.new-price {
     font-weight: 600;
 }
 span.old-price {
-    color: #b61717;
+    color: #3a3a3a;
     text-decoration: line-through;
     font-size: 12px;
     padding-left:5px;
