--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -42,3 +42,10 @@ ion-button.btn-cart {
     margin: 20px 0px 10px;
     font-size: 2rem;
 }
+.progress {
+    border-radius: 10px;
+}
+ion-progress-bar {
+    height: 10px;
+    border-radius: 10px;
+}
