--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -42,3 +42,38 @@ ion-button.btn-cart {
     margin: 20px 0px 10px;
     font-size: 2rem;
 }
+.bottles-svg {
+    position: relative;
+    width: 250px;
+    display: block;
+    margin: auto;
+}
+.bottles-svg span.bonus-text {
+    position: absolute;
+    top: 16%;
+        left: calc(50% - 30px);
+    font-size: 5rem;
+    color: #3880ff;
+    text-align: center;
+}
+.bottles-svg span.bonus-text small {
+    display: block;
+    font-size: 15px;
+    margin: 0px;
+    line-height: 2px;
+}
+/*test*/
+.circle-chart__circle {
+  animation: circle-chart-fill 3s reverse;
+  transform: rotate(-90deg);
+  transform-origin: center;
+}
+.circle-chart__circle.rebuild {
+  animation: circle-chart-fill 3s reverse;
+  transform: rotate(-90deg);
+  transform-origin: center;
+}
+
+@keyframes circle-chart-fill {
+  to { stroke-dasharray: 0 150; }
+}
