home page edits

--- a/src/app/account-orders/account-orders.page.html
+++ b/src/app/account-orders/account-orders.page.html
@@ -109,7 +109,7 @@
   <div class="history-section" *ngIf="history">
     <ion-item-group>
       <ion-item-divider>
-        <ion-label>Замовлення загалом</ion-label>
+        <ion-label>Історія замовлення</ion-label>
       </ion-item-divider>
       <ion-item *ngFor="let hist of history">
         <ion-label>
