--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
-       <ion-icon name="bag-add-outline"></ion-icon>
+      <ion-icon name="qr-code-outline"></ion-icon>
       <ion-label>Магазин</ion-label>
     </ion-tab-button>
 
