--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,7 @@
 
   <ion-content class="ion-padding">
 	<section class="top-slider">
-  <swiper-container pagination="true" navigation="true" autoplay="2000" loop="true" effect="fade">
+  <swiper-container pagination="true" navigation="false" autoplay="2000" loop="true" effect="fade">
 		<swiper-slide *ngFor="let slide of sliderItems" class="swiperSlide">
 			<div class="slide-el">
 			<img src="{{ slide['src'] }}">
