--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -40,7 +40,9 @@
 </div>
 </div>
 
-
+<ion-card-header>
+  <ion-card-title class="ion-text-center">Доставка</ion-card-title>
+  </ion-card-header>
 
 
   <ion-segment [scrollable]="true" value="{{ getActiveTab }}">
