--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -23,6 +23,12 @@ ion-card.product-item ion-card-title {
     display: flex;
     overflow: hidden;
 }
+.price {
+    color: #3880ff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+}
 span.new-price {
     color: #27b927;
     font-weight: 600;
