--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon name="home-outline"></ion-icon>
-      <ion-label>Головна</ion-label>
+      <ion-icon name="water-outline"></ion-icon>
+      <ion-label>Доставка</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
