--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -21,8 +21,9 @@
     font-weight: 600;
 }
 span.new-price {
-    color: #27b927;
+    color: #F44336;
     font-weight: 600;
+    font-size: 16px;
 }
 span.old-price {
     color: #3a3a3a;
