--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -72,7 +72,7 @@
                     <ion-card-subtitle *ngIf="product.specials == false" class="price">{{ product.price }}</ion-card-subtitle>
                     <ion-card-subtitle *ngIf="product.specials == true"><span class="new-price">{{ product.special }}</span> <span class="old-price">{{ product.price }}</span></ion-card-subtitle>
                     <div class="add-cart-button">
-                      <ion-button expand="full" shape="round" class="btn-cart" (click)="addCart(product.product_id, 1)"><ion-icon slot="start" name="cart-outline"></ion-icon> В кошик</ion-button>
+                      <ion-button shape="round" class="btn-cart" (click)="addCart(product.product_id, 1)"><ion-icon slot="start" name="cart-outline"></ion-icon> В кошик</ion-button>
                     </div>
                   </ion-col>
                 </ion-row>
