--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -25,7 +25,7 @@
 <div class="bottles">
 <div class="bottles-svg">
 <svg [attr.class]="svg_class" viewbox="0 0 33.83098862 33.83098862" width="150" height="150" xmlns="http://www.w3.org/2000/svg">
-  <circle class="circle-chart__background" stroke="#efefef" stroke-width="30" fill="none" cx="75" cy="75" r="60" />
+  <circle class="circle-chart__background" stroke="#fff" stroke-width="30" fill="none" cx="75" cy="75" r="60" />
   <circle id="progress-line" class="circle-chart__circle" stroke="#3880ff" stroke-width="30" [attr.stroke-dasharray]="progress" stroke-linecap="round" fill="none" cx="75" cy="75" r="60" />
 </svg>
 <span class="bonus-text"><b>{{bonuses_boutles}}</b><small>бутелів</small><small>4/10</small></span>
@@ -33,7 +33,7 @@
 
 <div class="bottles-svg">
 <svg [attr.class]="svg_class" viewbox="0 0 33.83098862 33.83098862" width="150" height="150" xmlns="http://www.w3.org/2000/svg">
-  <circle class="circle-chart__background" stroke="#efefef" stroke-width="30" fill="none" cx="75" cy="75" r="60" />
+  <circle class="circle-chart__background" stroke="#fff" stroke-width="30" fill="none" cx="75" cy="75" r="60" />
   <circle id="progress-line" class="circle-chart__circle" stroke="#3880ff" stroke-width="30" [attr.stroke-dasharray]="progress_l" stroke-linecap="round" fill="none" cx="75" cy="75" r="60" />
 </svg>
 <span class="bonus-text"><b>{{bonuses_liters}}</b><small>літрів</small><small>4/10</small></span>
@@ -59,14 +59,17 @@
         <div class="empty-products" *ngIf="showEmptyMsg == true">В цій категорії ще немає товарів...</div>
           <ion-col *ngFor="let product of products" size="12">
             <ion-card class="product-items">
-              <ion-card-content>
+              
                 <ion-row class="product-item">
                   <ion-col size="4">
+                    <ion-card-content>
                     <div class="image">
                       <img src="{{product.image}}" alt="{{product.name}}" (click)="openProduct(product.product_id)" />
                     </div>
+                  </ion-card-content>
                   </ion-col>
                   <ion-col size="8">
+                    <ion-card-content>
                     <ion-card-title (click)="openProduct(product.product_id)" class="products-title">{{ product.name }}</ion-card-title>
                     <ion-card-subtitle *ngIf="product.unit" > {{ product.unit }}</ion-card-subtitle>
                     <ion-card-subtitle *ngIf="product.specials == false" class="price">{{ product.price }}</ion-card-subtitle>
@@ -74,9 +77,10 @@
                     <div class="add-cart-button">
                       <ion-button shape="round" class="btn-cart" (click)="addCart(product.product_id, 1)"><ion-icon slot="start" name="cart-outline"></ion-icon> В кошик</ion-button>
                     </div>
+                  </ion-card-content>
                   </ion-col>
                 </ion-row>
-              </ion-card-content>
+              
             </ion-card>
           </ion-col>
       </ion-row>
