--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -87,6 +87,37 @@
         <div class="check"><ion-toggle aria-label="shipping.name" (click)="changeShipping(shipping.shipping_id)" [checked]="isSelectedShipping(shipping.shipping_id)"></ion-toggle></div>
       </ion-label>
     </ion-item>
+    <ion-item *ngIf="time_periods != false">
+      <ion-label (click)="setDateAndTime()" class="date-time-line">
+        <div><ion-icon name="calendar-outline"></ion-icon> Дата та час</div>
+        <div class="selected-time">{{ selected_date_and_time }}</div>
+      </ion-label>
+    </ion-item>
+    <!--Next row-->
+    <ion-item>
+      <ion-textarea [(ngModel)]="comment" label="Додати коментар" placeholder=""></ion-textarea>
+    </ion-item>
+    <!--Next row-->
+    <ion-item>
+      <ion-label class="address-line">
+        <div class="name">Безконтактна доставка</div>
+        <div class="check"><ion-toggle aria-label="" (click)="noContactShipping()" [checked]="is_no_contact"></ion-toggle></div>
+      </ion-label>
+    </ion-item>
+    <!--Next row-->
+    <ion-item>
+      <ion-label class="address-line">
+        <div class="name">Не телефонувати</div>
+        <div class="check"><ion-toggle aria-label="" (click)="noCall()" [checked]="is_no_call"></ion-toggle></div>
+      </ion-label>
+    </ion-item>
+    <!--Next row-->
+    <ion-item>
+      <ion-label class="address-line">
+        <div class="name">Застава за тару</div>
+        <div class="check"><ion-toggle aria-label="" (click)="zastavaTrigger()" [checked]="is_zastava"></ion-toggle></div>
+      </ion-label>
+    </ion-item>
     <!--Next row-->
     <ion-list-header>
       <ion-label><b>Замовлення загалом</b></ion-label>
@@ -123,4 +154,35 @@
     Саме час додати товари :)</p>
   </div>
 </ion-note>
+
+<!--select date time in modal-->
+<ion-modal [isOpen]="modal_picker_status">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Оберіть дату та час</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="closeModalPicker()"><ion-icon name="close-outline"></ion-icon></ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding date-time-checkout-picker">
+        <h4>Оберіть дату</h4>
+        <ion-datetime
+        displayFormat="DD.MM.YYYY"
+        pickerFormat="DD.MM.YYYY"
+        size="cover"
+        presentation="date"
+        [(ngModel)]="selectedDate"
+        ></ion-datetime>
+        <div class="time">
+          <h4>Оберіть час</h4>
+<ion-radio-group [(ngModel)]="selectedTime" value="">
+  <ion-radio *ngFor="let time of time_periods" value="{{ time.text }}">{{ time.text }}</ion-radio><br />
+</ion-radio-group>
+        </div>
+        <ion-button (click)="saveDateAndTime()" expand="block">Застосувати</ion-button>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
