--- a/src/app/tab5/tab5.page.scss
+++ b/src/app/tab5/tab5.page.scss
@@ -30,7 +30,7 @@ ion-title ion-icon {
     width: 100%;
 }
 .product-line .caption h4 {
-    color: #3880ff;
+    color: #444;
     font-weight: 600;
 }
 .total-product {
@@ -69,7 +69,8 @@ span.old-price {
 }
 .total-product .total {
     font-weight: 600;
-    color: #2dd36f;
+    color: #3880ff;
+
 }
 .address-line .name{
   width:100%
