--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -84,3 +84,9 @@ ion-row.product-item {
     display: flex;
     align-items: center;
 }
+ion-card.home_text{
+    margin: 0;
+    box-shadow: none;
+    border-radius: 10px;
+    margin-top: 10px;
+}
