--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -25,3 +25,8 @@ span.old-price {
 ion-button.btn-cart {
     margin-top: 10px;
 }
+.qr-code ion-card {
+    box-shadow: none;
+    border-radius: 10px;
+}
+
