--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,20 +8,16 @@
   </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true" class="ion-padding" color="light">
+<ion-content [fullscreen]="true" class="ion-padding">
 <div class="my-acc">
-<ion-list>
-  <ion-list-header>
-    <ion-label>Мій акаунт</ion-label>
-  </ion-list-header>
+<ion-list lines="none">
+  
     <ion-item (click)="openMyAccModal()">
       <ion-label><span class="icon"><ion-icon name="person-outline"></ion-icon></span> Мої дані</ion-label></ion-item>
     <ion-item (click)="openAddresses()">
       <ion-label><span class="icon"><ion-icon name="navigate-outline"></ion-icon></span> Адреси доставки</ion-label></ion-item>
     <ion-item (click)="openOrdersPage()">
       <ion-label><span class="icon"><ion-icon name="cart-outline"></ion-icon></span> Мої замовлення</ion-label></ion-item>
-    <ion-item>
-      <ion-label><span class="icon"><ion-icon name="gift-outline"></ion-icon></span> Мої бонуси</ion-label></ion-item>
     <ion-item (click)="getQr()">
         <ion-label><span class="icon"><ion-icon name="qr-code-outline"></ion-icon></span> Мій QR</ion-label></ion-item>
     <ion-item class="remove-acc" id="remove-acc-alert">
