--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,4 +1,5 @@
 <ion-content [fullscreen]="true">
+  <ion-icon class="close-auth" (click)="closeAuth()" name="close-outline"></ion-icon>
   <ion-grid>
     <ion-row class="img-logo">
       <img src="/assets/logo.png" alt="Skywater"/>
