--- a/src/app/auth/auth.page.scss
+++ b/src/app/auth/auth.page.scss
@@ -1,5 +1,6 @@
 ion-content{
-  --ion-background-color:rgb(0 144 227)
+  --ion-background-color:rgb(0 144 227);
+  --background: rgb(0 144 227) !important;
 }
 ion-row.img-logo img {
     max-width: 130px;
@@ -17,4 +18,11 @@ ion-row.img-logo img {
       align-items: center;
       display: flex;
       justify-content: center;
+}
+ion-icon.close-auth {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    font-size: 1.8rem;
 }
